--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
+MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/BankingDB?retryWrites=true&w=majority&appName=Cluster0"
 PORT=2014
