new package.json

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,19 @@
+// {
+//   "version": 2,
+//   "builds": [
+//     {
+//       "src": "./server.jsx",
+//       "use": "@vercel/node"
+//     }
+//   ],
+//   "routes": [
+//     {
+//       "src": "/(.*)",
+//       "dest": "/"
+//     }
+//   ]
+// }
+
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./server.jsx",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
