New route added

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,8 +12,12 @@
 //       "dest": "/"
 //     }
 //   ]
-// }
-
+// },
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
 }
