--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ firebase-debug.log*
 firebase-debug.*.log*
 
 # Firebase cache
-.firebase/
+/.firebase
 
 # Firebase config
 
@@ -45,7 +45,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+/node_modules
 
 # Optional npm cache directory
 .npm
