--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/BankingDB?retryWrites=true&w=majority&appName=Cluster0"
-# MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
+# MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/BankingDB?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
 PORT=2014
