--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-      "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@ant-design/colors": "^7.0.2",
@@ -62,6 +62,7 @@
     "redux": "^5.0.1",
     "simplebar": "^6.2.5",
     "simplebar-react": "^3.2.4",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.2",
     "yup": "^1.4.0"
