--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
- MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/test123"
+ #MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/test123"
 PORT=2014
-#MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
+JWT_SECRET = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
