Change Password updated

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
- #MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/test123"
+ MONGO_URI= "mongodb+srv://admin:admin@cluster0.fnrpj0m.mongodb.net/test123"
 PORT=2014
 JWT_SECRET = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
+#MONGO_URI= "mongodb://0.0.0.0:27017/BankDB"
